# mcp-jira

./: .env.example  .gitignore  Dockerfile  LICENSE  MCPReadme.md  README.md  debug_create_project.py  glama.json  jira.py  pyproject.toml  pytest.ini  pyvenv.cfg  run_server.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  copilot.yml  story.yml  task.yml
claude_reference/: jira_advanced.txt  jira_api_documentation.txt  jira_contributing.txt  jira_examples.txt  jira_installation.md  jira_shell.txt  mcp_instructions.txt
docs/: create_issues_v3_conversion.md
mcp/: __init__.py
mcp/server/: __init__.py
mcp/types/: __init__.py
src/: __init__.py
src/mcp/: __init__.py
src/mcp/server/: __init__.py  stdio.py
src/mcp/types/: __init__.py
src/mcp_server_jira/: __init__.py  __main__.py  jira_v3_api.py  server.py
tests/: test_add_comment_v3_api_only.py  test_bulk_create_issues_v3_api.py  test_create_issue_v3_api_only.py  test_create_issues_integration.py  test_create_jira_issues_server.py  test_get_transitions_v3.py  test_jira_v3_api.py  test_search_issues_v3_api.py  test_server.py  test_transition_issue_v3.py  test_transition_issue_v3_api_only.py
